--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <!-- This tells the browser how to read the document. -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1"
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Resume</title>
   <link href="css/style.css" rel="stylesheet">
 <!-- <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
@@ -11,12 +11,6 @@
 <body>
   <div id="main">
 
-    <!--
-    Everything from here to the <script> tag below is the skeleton of your
-    website. Your code will add information to each of the sections of the
-    resume below. You can pretty easily figure out what each section will
-    display by looking at the id or at what's written between the <h2> tags.
-    -->
     <div id="header" class="center-content clear-fix">
       <ul id="topContacts" class="flex-box"></ul>
     </div>
