--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Resume</title>
   <link href="css/style.css" rel="stylesheet">
-<!-- <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+  <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
 </head>
 <body>
   <div id="main">
