--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <!-- This tells the browser how to read the document. -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Resume</title>
+  <title>Meng Lin's Resume</title>
   <link href="css/style.css" rel="stylesheet">
-  <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 </head>
 <body>
   <div id="main">
