--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Meng Lin's Resume</title>
   <link href="css/style.css" rel="stylesheet">
-  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBTASu4wSSGtlOvRn7rBiBxEl4RJr2Yreo"></script>
 </head>
 <body>
   <div id="main">
@@ -30,12 +29,13 @@
     <div id="lets-connect" class="dark-gray">
       <h2 class="orange center-text">Let's Connect</h2>
         <ul id="footerContacts" class="flex-box">
-      </ul>
+        </ul>
     </div>
   </div>
 
+  <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBTASu4wSSGtlOvRn7rBiBxEl4RJr2Yreo"></script>
 
-  <script src="js/jQuery.js"></script>
+  <script src="jQuery.js"></script>
 
   <script src="js/helper.js"></script>
 
