--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBTASu4wSSGtlOvRn7rBiBxEl4RJr2Yreo"></script>
 
-  <script src="jQuery.js"></script>
+  <script src="lib/jQuery.js"></script>
 
   <script src="js/helper.js"></script>
 
