--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Meng Lin's Resume</title>
   <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
   <link href="css/style.css" rel="stylesheet">
+  <script src="https://use.fontawesome.com/e7fc817767.js"></script>
 </head>
 <body>
   <div id="main">
@@ -14,8 +16,8 @@
     <div id="header" class="center-content clear-fix">
       <ul id="topContacts" class="flex-box"></ul>
     </div>
-    <div style="clear: both;"></div>
-    <div id="workExperience" class="gray">
+    <!-- <div style="clear: both;"></div> -->
+    <div id="workExperience" class="row gray">
       <h2>Work Experience</h2>
     </div>
     <div id="projects">
@@ -28,21 +30,16 @@
       <h2>Where I've Lived and Worked</h2>
     </div>
     <div id="lets-connect" class="dark-gray">
-      <h2 class="orange center-text">Let's Connect</h2>
+      <h2 class="connect center-text">Let's Connect</h2>
         <ul id="footerContacts" class="flex-box">
         </ul>
     </div>
   </div>
 
   <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBTASu4wSSGtlOvRn7rBiBxEl4RJr2Yreo"></script>
-
   <script src="lib/jQuery.js"></script>
-
   <script src="js/helper.js"></script>
-
   <script src="js/resumeBuilder.js"></script>
-
-
   <!--
   These scripts are written in JavaScript. You'll be breaking them down as part of
   a quiz. Essentially, the next few lines are checking to see if you have not
