content: add two new project; feat: add Bootstrap Collapse

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Meng Lin's Resume</title>
   <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-  <link href="css/style.css" rel="stylesheet">
   <script src="https://use.fontawesome.com/e7fc817767.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <div id="main">
@@ -41,6 +42,8 @@
 
   <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBTASu4wSSGtlOvRn7rBiBxEl4RJr2Yreo"></script>
   <script src="lib/jQuery.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="js/helper.js"></script>
   <script src="js/resumeBuilder.js"></script>
 </body>
